--- a/prototype2/export_presets.cfg
+++ b/prototype2/export_presets.cfg
@@ -4,10 +4,11 @@ name="Windows Desktop"
 platform="Windows Desktop"
 runnable=true
 custom_features=""
-export_filter="all_resources"
+export_filter="scenes"
+export_files=PoolStringArray( "res://Encounter.tscn", "res://Plant.tscn", "res://Storm.tscn" )
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="build/windows/prototype-0_0_1.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -32,10 +33,37 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
 application/icon=""
-application/file_version=""
-application/product_version=""
-application/company_name=""
-application/product_name=""
+application/file_version="0.0.1"
+application/product_version="0.0.1"
+application/company_name="Tricard Games"
+application/product_name="Plant Game"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
+
+[preset.1]
+
+name="Linux/X11"
+platform="Linux/X11"
+runnable=true
+custom_features=""
+export_filter="scenes"
+export_files=PoolStringArray( "res://Encounter.tscn", "res://Plant.tscn", "res://Storm.tscn" )
+include_filter=""
+exclude_filter=""
+export_path="build/linux/prototype-0_0_1.x86_64"
+patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
+
+[preset.1.options]
+
+texture_format/bptc=false
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
+binary_format/64_bits=true
+binary_format/embed_pck=false
+custom_template/release=""
+custom_template/debug=""
