More exports stuff

--- a/prototype2/export_presets.cfg
+++ b/prototype2/export_presets.cfg
@@ -4,8 +4,7 @@ name="Windows Desktop"
 platform="Windows Desktop"
 runnable=true
 custom_features=""
-export_filter="scenes"
-export_files=PoolStringArray( "res://Encounter.tscn", "res://Plant.tscn", "res://Storm.tscn" )
+export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="build/windows/prototype-0_0_1.exe"
@@ -47,8 +46,7 @@ name="Linux/X11"
 platform="Linux/X11"
 runnable=true
 custom_features=""
-export_filter="scenes"
-export_files=PoolStringArray( "res://Encounter.tscn", "res://Plant.tscn", "res://Storm.tscn" )
+export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="build/linux/prototype-0_0_1.x86_64"
